# ICSTP-A1

./: .gitignore  CMakeLists.txt  Makefile.bak  README  commit.sh  report.md  task.md  test.out  test.sh  usage.sh  zip.sh  实验1报告.md
A2-pxe/: build.sh  create.sh  default.xml  repot.md  set.sh
Code/: .gitignore  Makefile  a.txt  data.c  data.h  datastructure.c  datastructure.h  debug.h  intercode.h  intercode_optimizer.c  lex.yy.c  lexical.l  main.c  mips.c  mips.h  parser  scanner  semantic.c  symbol.c  syntax copy.txt  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y  test.c  translate.c  vector_hash.c
Test/: Makefile  lex.yy.c  mytest2.cmm  scanner  test.cmm  test0.cmm  test1.cmm  test14.cmm  test2.cmm
Test/Scanner/: Makefile  lexical.l
Test/senamic_test/jlj_test/: test1.cmm  test1.output  test2.cmm  test2.output  test3.cmm  test3.output
Test/senamic_test/simple_test/: test1.output  test10.output  test11.output  test12.output  test13.output  test14.output  test15.output  test16.cmm  test16.output  test17.output  test2.output  test3.output  test4.output  test5.output  test6.output  test7.output  test8.output  test9.output  test_op2.output  test_op4.output  test_op6.cmm  test_op6.output
Test/senamic_test/zzm_test/: test1.cmm  test1.output  test10.cmm  test2.cmm  test2.output  test3.cmm  test3.output  test4.cmm  test5.cmm  test7.cmm  test8.cmm  test8.output  test9.cmm  test9.output
Test/test/: h1.output  m12.output  m18.output  mytest1.cmm  mytest1.output  mytest2.cmm  mytest3.cmm  mytest3.output
